# mod-gpt

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.github/: pull_request_template.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog-log.yml  release-please.yml
docs/: Architecture Overview.md  Configuration Guide.md  Database Schema.md  Deployment Guide.md  Guild Isolation.md  Heuristics System.md  Machine Registration.md  Message Splitting.md  Per-Guild Configuration Implementation.md  Per-Guild Configuration.md  Prompt Injection Protection.md  Release Process.md
modgpt/: __init__.py  bot.py  config.py  db.py  discord_bot.py  health.py  llm.py  prompts.py  state.py
modgpt/agents/: __init__.py  engagement.py  moderation.py  router.py
modgpt/commands/: __init__.py  context_menu.py  slash.py
modgpt/database/: __init__.py
modgpt/models/: __init__.py  config.py
modgpt/services/: __init__.py  llm.py  moderation.py  state.py
modgpt/utils/: __init__.py
sentinel/: __init__.py  bot.py  db.py  health.py
sentinel/commands/: __init__.py  context_menu.py  slash.py
sentinel/database/: __init__.py
sentinel/models/: __init__.py  config.py
sentinel/services/: __init__.py  conversations.py  llm.py  moderation.py  registration.py  state.py
sentinel/utils/: __init__.py  discord.py  prompts.py  seed_heuristics.py
tests/: README.md  test_message_splitting.py  test_prompt_injection.py
