[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-ai"
version = "1.0.2"
description = "AI-Powered Discord Moderation Bot - Combines fast pattern matching with LLM reasoning to protect your community."
authors = [{ name = "Luke Oliff" }]
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.3.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "psycopg2-binary>=2.9.10",
    "certifi>=2024.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
ignore = ["E203", "E501"]

[project.optional-dependencies]
dev = ["black>=23.10.0", "ruff>=0.1.5"]
